# Jane

./: .gitignore  CharProp.hs  ClassesLens.hs  Command.hs  DB.hs  Db.hs  Files.hs  Flagged.hs  Flags.hs  GUI.hs  Helpers.hs  IPC.hs  Import.hs  ImpreciseMatch.hs  Jane.cabal  LICENSE  Lex.hs  Main.hs  N.hs  Notes.hs  Parse.hs  Paths.hs  Patterns.hs  Test.hs  llexp.hs  main.glade  mtest.hs  ttest.hs
GUI/: Fake.hs  GTK.hs
